--- a/COURSEWORK_JANATUL.ipynb
+++ b/COURSEWORK_JANATUL.ipynb
@@ -108,8 +108,14 @@
       },
       "source": [
         "The Paper I select for my peer review paper is - **“Computer-aided detection of breast cancer on the Wisconsin dataset: An artificial neural networks approach ”** and here is the Link: Impact Factorhttps://www.sciencedirect.com/journal/biomedical-signal-processing-and-control/about/insights. **This paper has an 8.2 cite score and 5.1 impact factor.**\n",
+        "\n",
         "This paper presents a study on the use of a shallow artificial neural network (ANN) model for the diagnosis and classification of breast cancer using the Wisconsin breast cancer dataset (WBCD) and the Wisconsin diagnostic breast cancer (WDBC) dataset. The main focus of this paper is to evaluate the effectiveness of ANN in accurately identifying breast cancer cases from this dataset.\n",
-        "######"
+        "\n",
+        "The objective of this research is to create and evaluate a breast cancer detection system based on artificial neural networks. Also, Optimizing patient outcomes depends on the early and exact diagnosis of breast cancer.\n",
+        "\n",
+        "However, the primary machine learning method used in this research is artificial neural networks. ANNs are trained on the dataset in order to identify patterns and relationships between the diagnosis (**benign or malignant**) and the input features. The authors will probably go over the neural network's architecture—how many layers and neurons it has—as well as the training procedure. Furthermore, included in this work is the ANN-based system's performance, including metrics like area under the curve of ROC, sensitivity, specificity, and accuracy. When evaluating the system's ability to differentiate between benign and malignant cases, several parameters are essential. Furthermore, the trained artificial neural network's results, which show that it can correctly diagnose cases of breast cancer, are probably presented by the authors.\n",
+        "\n",
+        "To sum up, this study analyses the use of the Wisconsin dataset in artificial neural network detection of breast cancer. It seeks to offer an automated and dependable technique for early detection of breast cancer, which may enhance patient outcomes and care.\n"
       ]
     },
     {
@@ -3148,7 +3154,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1z4f5gTBjdb_mYFANE45GOPKr-FhqoGk_",
-      "authorship_tag": "ABX9TyM+P+AJ67bK5IPSjBs80Yev",
+      "authorship_tag": "ABX9TyMRCnJ35P5usHgx1AFPgHlC",
       "include_colab_link": true
     },
     "kernelspec": {
